# KosmosEngine

./: .gitignore  CMakeLists.txt  README.md
Projects/Kosmos/: CMakeLists.txt  README.md
Projects/Kosmos.Game/: CMakeLists.txt  README.md
Projects/Kosmos.Game/src/: Game.cpp
Projects/Kosmos/dependencies/glad/include/glad/: glad.h
Projects/Kosmos/dependencies/glad/src/: glad.c
Projects/Kosmos/src/: Engine.cpp  Engine.h  Window.h  shader_s.h
Projects/Kosmos/src/Core/: Window.cpp  Window.hpp
Projects/Kosmos/src/Helpers/: Debug.cpp  Debug.h
src/: Game.cpp  Kosmos.cpp  Kosmos.hpp
src/Engine/: DevUI.hpp  Engine.cpp  Engine.hpp  Kosmos.cpp  Kosmos.hpp
src/Engine/Core/: Window.cpp  Window.hpp
src/Engine/Helpers/: Debug.cpp  Debug.h  shader_s.h
src/Engine/core/: Shader.hpp
src/Engine/helpers/: Logger.cpp  Logger.hpp
